--- a/index.css
+++ b/index.css
@@ -35,7 +35,7 @@ div#container {
   position: sticky;
   top: 0px;
   padding: 10px;
-  background-color: rgb(255, 255, 255);
+  background-color: white;
   overflow: auto;
   white-space: nowrap;
   scrollbar-width: none;
